Fixing some layout bugs

--- a/src/ts/schemaDesigner/schemaDesigner.css
+++ b/src/ts/schemaDesigner/schemaDesigner.css
@@ -46,7 +46,7 @@
     background-color: var(--color-toolbar-divider);
   }
   
-  .sd-graph {
+  #graphContainer {
     width: 100%;
     height: 100%;
     z-index: 1;
